--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   ionicons: ^0.2.2
   provider: ^6.0.5
+  cached_network_image: ^3.3.0
+
 
 dev_dependencies:
   flutter_test:
