--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   ionicons: ^0.2.2
   provider: ^6.0.5
   cached_network_image: ^3.3.0
+  font_awesome_flutter: ^10.6.0
+  staggered_grid_view_flutter: ^0.0.4
 
 
 dev_dependencies:
