--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.3.0
   font_awesome_flutter: ^10.6.0
   staggered_grid_view_flutter: ^0.0.4
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
