--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   staggered_grid_view_flutter: ^0.0.4
   flutter_rating_bar: ^4.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_slidable: ^3.0.1
 
 
 dev_dependencies:
